tests/language_modules/03_import_resolution/fixtures/invalid/exposed_symbol_not_found/App/Main.vf
module App.Main

import Banking.Proofs exposing missing_symbol

procedure main()
is
    check true
end main

end App.Main